...

        <TextView
            android:id="@+id/textResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="0dp"
...

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="0dp"
                android:layout_height="0dp"
...

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="0dp"
...

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="0dp"
...

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="0dp"
...

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="0dp"
                android:layout_height="0dp"
...

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="0dp"
...

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="0dp"
...

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="0dp"
                android:layout_height="0dp"
...

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="0dp"
                android:layout_height="0dp"
...

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="0dp"
...

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="0dp"
                android:layout_height="0dp"
...

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="0dp"
                android:layout_height="0dp"
...
